03-int-gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "${var.main_vpc}-igw"
  }
}
